styles/prototype.css
/* ... */
#prototype .option_message {
    margin-top: 10px;
    background-color: transparent;
    background-image: none;
    border-color: transparent !important;
    box-shadow: 0 0 0 transparent;
    height: 58px !important;
    line-height: 58px !important;
}
#prototype .option_message:first-child {
    margin-top: 0 !important;
}
#prototype .option_message,
#prototype .option_message * {
    /*cursor: default !important;*/
}

/*
#prototype .option_message_collapsed {
    margin-top: 5px;
    opacity: 0.75;
    filter: opacity(alpha = 75);
}
#prototype .option_message_collapsed:hover {
    opacity: 1.00;
    filter: opacity(alpha = 100);
}
#prototype .option_message_collapsed,
#prototype .option_message_collapsed .chrome,
#prototype .option_message_collapsed .inset  {
    height: 22px !important;
}
#prototype .option_message_collapsed .sprite,
#prototype .option_message_collapsed .subtext,
#prototype .option_message_collapsed .subtext2 {
    display: none !important;
}
*/


/* -- HIDE ALL STORY RELATED TEXT -- */

#prototype .option_message {
    margin-top: 6px;
    margin-bottom: 8px;
    opacity: 1.00;
    filter: opacity(alpha = 100);
}
#prototype .option_message,
#prototype .option_message * {
    cursor: default !important;
}
#prototype .option_message,
#prototype .option_message .chrome,
#prototype .option_message .inset  {
    height: 22px !important;
}
#prototype .option_message .sprite,
#prototype .option_message .subtext,
#prototype .option_message .subtext2 {
    display: none !important;
}


#prototype .option:hover {
    color: #FFFFFF;
}
#prototype .option_disabled {
    background-color: #595959;
    background-image: none;
    color: #CACACA;
}
#prototype .option_disabled:hover {
    background-color: #595959;
    background-image: none;
    color: #CACACA;
}
#prototype .option_wrapper_default .option_complete,
#prototype .option_wrapper_complete .option_complete {
    background-color: #595959;
    background-image: none;
    color: #CACACA;
    opacity: 0.45;
}
#prototype .option_wrapper_default .option_complete:hover,
#prototype .option_wrapper_complete .option_complete:hover {
    opacity: 0.75;
}
#prototype .option_wrapper_complete .option_complete {
    opacity: 0.75;
}
#prototype .option_wrapper_complete .option_complete:hover {
    opacity: 1.00;
}

#prototype .option_disabled {
    opacity: 0.2;
    cursor: default;
}
#prototype .option_hidden {
    display: none;
}

#prototype .option_back {
    height: 47px;
    line-height: 20px;
    border-color: #1A1A1A;
    background-color: #262626;
    background-image: none;
    color: #CACACA;
    position: absolute;
    bottom: 0;
    left: 8px;
    z-index: 20;
}
#prototype .option_back:hover {
    background-color: #292929;
}
#prototype .option_this-team-select {
    position: absolute;
    bottom: 54px;
    left: 8px;
}
#prototype .option_this-team-select .chrome label {
    width: 100px !important;
    margin-left: 460px !important;
    padding-left: 0 !important;
}
body.windowFlag_landscapeMode #prototype .option_this-team-select .chrome label,
body.mobileFlag_landscapeMode #prototype .option_this-team-select .chrome label {
    margin-left: 560px !important;
}
#prototype .option label {
    padding: 15px 50px;
    background-color: #2A2A2A;
    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.25);
    -moz-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.25);
    -webkit-box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.25);
    border: 2px solid #373737;
    border-radius: 0.75em;
    -moz-border-radius: 0.75em;
    -webkit-border-radius: 0.75em;
    cursor: pointer;
    _cursor: hand;
    position: relative;
}
#prototype .option:hover label,
#prototype .option label:hover {
    background-color: #2D2D2D;
}
#prototype .menu {
    overflow: hidden;
    padding: 0 6px 0 6px;
}
body.windowFlag_landscapeMode #prototype .menu,
body.mobileFlag_landscapeMode #prototype .menu {
    padding: 0 10px 0 5px;
}
#prototype .menu_hide {
    display: none;
}
#prototype .block_2,
#prototype .block_4,
#prototype .block_6,
#prototype .block_8,
#prototype .block_10 {
    /*
    margin-right: 0;
    width: 371px;
    */
}

#mmrpg #prototype .option_this-player-select {
    background-image: url(../images/menus/menu-options_this-player-select.gif);
    background-repeat: repeat;
}
#mmrpg #prototype .option_this-battle-select {
    background-image: url(../images/menus/menu-options_this-battle-select.gif);
}
#mmrpg #prototype .option_this-robot-select {
    background-image: url(../images/menus/menu-options_this-robot-select.gif);
}
#mmrpg #prototype .option_this-team-select {
    background-image: url(../images/menus/menu-options_this-team-select.gif);
}

#mmrpg #prototype .option_this-dr-light-select {
    background-image: url(../images/menus/menu-options_this-dr-light-player-select.gif);
}
#mmrpg #prototype .option_this-dr-light-player-select {
    background-image: url(../images/menus/menu-options_this-dr-light-player-select.gif);
}
#mmrpg #prototype .option_this-dr-light-battle-select {
    background-image: url(../images/menus/menu-options_this-dr-light-battle-select.gif);
}
#mmrpg #prototype .option_this-dr-light-robot-select {
    background-image: url(../images/menus/menu-options_this-dr-light-robot-select.gif);
}
#mmrpg #prototype .option_this-dr-light-team-select {
    background-image: url(../images/menus/menu-options_this-dr-light-team-select.gif);
}

#mmrpg #prototype .option_this-dr-wily-select {
    background-image: url(../images/menus/menu-options_this-dr-wily-player-select.gif);
}
#mmrpg #prototype .option_this-dr-wily-player-select {
    background-image: url(../images/menus/menu-options_this-dr-wily-player-select.gif);
}
#mmrpg #prototype .option_this-dr-wily-battle-select {
    background-image: url(../images/menus/menu-options_this-dr-wily-battle-select.gif);
}
#mmrpg #prototype .option_this-dr-wily-robot-select {
    background-image: url(../images/menus/menu-options_this-dr-wily-robot-select.gif);
}
/* ... */

